Minimal node.js version is 6

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "asem-51",
     "asm"
   ],
+  "engines": {
+    "node": ">=6.0.0"
+  },
   "author": "Equan Pr.",
   "license": "MIT",
   "dependencies": {
