--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
     - "6"
     - "6.1"
+before_install:
+    - sudo apt-get install -y wget
+    - wget -c http://plit.de/asem-51/asem51_1.3-2_i386.deb
+    - sudo dpkg -i asem51_1.3-2_i386.deb
